# setup.cfg
[metadata]
name = tick_db_etl
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Sierra Chart Tick and Depth ETL Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = # Optional: URL to your project repository
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License  # Choose your license
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20  # From the README's prerequisites
    # pytz might be needed for timezone handling in parsers or sym_it - verify if used
    # pytz

[options.packages.find]
where = src